# game_of_life

./: README.md  pyproject.toml
app/: board.py  rules.py  simulator.py
app/lifeforms/: GGG.py  base.py  gliders.py  growers.py  oscillators.py
tests/: test_app.py
