[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = ""
authors = ["ramagepe <ramagarciapedrosa@gmail.com>"]
readme = "README.md"
packages = [{include = "game_of_life"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
autopep8 = "^2.0.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
